# amazonka-extras

./: LICENSE  stack.yaml
aws/: aws-extra.cabal
aws-dynamodb/: aws-dynamodb-extra.cabal
aws-dynamodb/src/Control/Cache/AWS/: DynamoDB.hs
aws-dynamodb/src/Control/Monad/AWS/: DynamoDB.hs
aws-dynamodb/src/Control/Monad/AWS/DynamoDB/: Mock.hs
aws-dynamodb/src/Network/AWS/DynamoDB/: AttributeValue.hs  Extra.hs
aws-dynamodb/src/Test/Hspec/AWS/: DynamoDB.hs
aws-dynamodb/test-integration/: DynamoDBSpec.hs
aws-dynamodb/test/Control/Cache/AWS/: DynamoDBSpec.hs
aws-dynamodb/test/Network/AWS/DynamoDB/: AttributeValueSpec.hs  ExtraSpec.hs
aws-s3/: aws-s3-extra.cabal
aws-s3/src/Control/Monad/AWS/: S3.hs
aws-s3/src/Control/Monad/AWS/S3/: Mock.hs
aws-s3/src/Network/AWS/S3/: Extra.hs
aws-s3/test/Control/Monad/AWS/S3/: MockSpec.hs
aws-secretsmanager/: aws-secretsmanager-extra.cabal
aws-secretsmanager/src/Network/AWS/SecretsManager/: Extra.hs
aws-sns/: aws-sns-extra.cabal
aws-sns/src/Control/Monad/AWS/: Sns.hs
aws-sns/src/Control/Monad/AWS/Sns/: Mock.hs
aws-sns/test/Control/Monad/AWS/Sns/: MockSpec.hs
aws-sqs/: aws-sqs-extra.cabal
aws-sqs/src/Control/Monad/AWS/: Sqs.hs
aws-sqs/src/Control/Monad/AWS/Sqs/: Mock.hs
aws-sqs/src/Data/Conduit/: Sqs.hs
aws-sqs/test/Control/Monad/AWS/: SqsSpec.hs
aws/src/Control/Monad/Trans/AWS/: Extra.hs
