name:                aws-dynamodb-extra
version:             1.0.0.0
synopsis:            DynamoDB abstractions
description:         Please see README.md
homepage:            https://github.com/seek-oss/amazonka-extra#readme
author:              Tom Mortiboy
maintainer:          Tom Mortiboy
copyright:           2020 seek-oss
category:            Data, AWS, DynamoDB
build-type:          Simple
cabal-version:       >=1.10

flag test-integration
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Control.Cache.AWS.DynamoDB
                     , Control.Monad.AWS.DynamoDB
                     , Control.Monad.AWS.DynamoDB.Mock
                     , Network.AWS.DynamoDB.AttributeValue
                     , Network.AWS.DynamoDB.Extra
                     , Test.Hspec.AWS.DynamoDB
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , amazonka
                     , amazonka-core
                     , amazonka-dynamodb
                     , bytestring
                     , conduit
                     , containers
                     , deepseq
                     , exceptions
                     , generic-arbitrary
                     , hashable
                     , hspec
                     , lens
                     , mmorph
                     , mtl
                     , network-address
                     , newtype-generics
                     , primitive
                     , resourcet
                     , retry
                     , scientific
                     , text
                     , text1
                     , these
                     , thyme
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , uuid-types
                     , vector
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies
                     , DerivingVia
                     , FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections

test-suite aws-dynamodb-extra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Control.Cache.AWS.DynamoDBSpec
                     , Network.AWS.DynamoDB.AttributeValueSpec
                     , Network.AWS.DynamoDBSpec
  build-depends:       base
                     , aws-dynamodb-extra
                     , aeson
                     , amazonka-core
                     , amazonka-dynamodb
                     , bytestring
                     , containers
                     , hashable
                     , hspec
                     , lens
                     , mtl
                     , newtype-generics
                     , old-locale
                     , QuickCheck
                     , quickcheck-instances
                     , retry
                     , scientific
                     , text
                     , thyme
                     , unordered-containers
                     , uuid-types
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies
                     , DerivingVia
                     , FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections

test-suite aws-dynamodb-extra-test-integration
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-integration
  main-is:             Spec.hs
  other-modules:       DynamoDBSpec
  if flag(test-integration)
    buildable: True
  else
    buildable: False
  build-depends:       base
                     , aws-dynamodb-extra
                     , amazonka-dynamodb
                     , conduit
                     , hspec
                     , lens
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections

source-repository head
  type:     git
  location: https://github.com/seek-oss/amazonka-extra
