name:                aws-s3-extra
version:             1.0.0.0
synopsis:            S3 abstractions
description:         Please see README.md
homepage:            https://github.com/seek-oss/amazonka-extra#readme
author:              Tom Mortiboy
maintainer:          Tom Mortiboy
copyright:           2020 seek-oss
category:            Data, AWS, S3
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.AWS.S3
                     , Control.Monad.AWS.S3.Mock
                     , Network.AWS.S3.Extra
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , amazonka      >= 1.6.1
                     , amazonka-core >= 1.6.1
                     , amazonka-s3   >= 1.6.1
                     , bytestring
                     , conduit
                     , conduit-extra
                     , directory
                     , errors
                     , exceptions
                     , http-types
                     , lens
                     , mtl
                     , primitive
                     , QuickCheck
                     , quickcheck-instances
                     , resourcet
                     , transformers
                     , transformers-base
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections

test-suite aws-s3-extra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Control.Monad.AWS.S3.MockSpec
  build-depends:       base
                     , amazonka-core
                     , amazonka-s3
                     , bytestring
                     , conduit
                     , exceptions
                     , aws-s3-extra
                     , hspec
                     , http-types
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections

source-repository head
  type:     git
  location: https://github.com/seek-oss/amazonka-extra
