name:                aws-sns-extra
version:             1.0.0.0
synopsis:            SNS abstractions
description:         Please see README.md
homepage:            https://github.com/tmortiboy/amazonka-extra#readme
author:              Tom Mortiboy
maintainer:          Tom Mortiboy
copyright:           2020 seek-oss, 2020 amazonka-extras contributors
category:            Data, AWS, SNS
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.AWS.Sns
                     , Control.Monad.AWS.Sns.Mock
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , amazonka
                     , amazonka-sns
                     , exceptions
                     , lens
                     , mtl
                     , QuickCheck
                     , quickcheck-instances
                     , resourcet
                     , text
                     , transformers
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies
                     , FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections


test-suite aws-sns-extra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Control.Monad.AWS.Sns.MockSpec
  build-depends:       base
                     , aws-sns-extra
                     , hspec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections

source-repository head
  type:     git
  location: https://github.com/tmortiboy/amazonka-extra
