name:                aws-sqs-extra
version:             1.0.0.0
synopsis:            SQS abstractions
description:         Please see README.md
homepage:            https://github.com/tmortiboy/amazonka-extra#readme
author:              Tom Mortiboy
maintainer:          Tom Mortiboy
copyright:           2020 seek-oss, 2020 amazonka-extras contributors
category:            Data, AWS, SQS
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.AWS.Sqs
                     , Control.Monad.AWS.Sqs.Mock
                     , Data.Conduit.Sqs
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , amazonka      >= 1.6.1
                     , amazonka-sqs  >= 1.6.1
                     , bytestring
                     , conduit
                     , deepseq
                     , errors
                     , exceptions
                     , lens
                     , mmorph
                     , mtl
                     , primitive
                     , resourcet
                     , retry
                     , text
                     , transformers
                     , transformers-base
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies
                     , DerivingVia
                     , FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections

test-suite aws-sqs-extra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Control.Monad.AWS.SqsSpec
  build-depends:       base
                     , aws-sqs-extra
                     , hspec
                     , mtl
                     , QuickCheck
                     , retry
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections

source-repository head
  type:     git
  location: https://github.com/tmortiboy/amazonka-extra
